mobile issues nav fix & possible desktop white space fix

--- a/assets/stylus/modules/_main.styl
+++ b/assets/stylus/modules/_main.styl
@@ -226,31 +226,33 @@ button, .button, .button:hover, button:hover
 
 
 // Sticky nav styles
-.main-nav-wrapper
-  height 129px
+@media (min-width: 960px)
+    .main-nav-wrapper
+      height 129px
 
-.main-nav
-    background white
-    z-index 10000
+    .main-nav
+        background white
+        z-index 10000
 
-.nav-visible .main-nav
-    margin-top 0
+    .nav-visible .main-nav
+        margin-top 0
 
-.nav-hidden .main-nav
-    transition margin-top 0.3s ease-in-out
-    margin-top 0
-    position fixed
-    left 0
-    right 0
-    top 0
+    .nav-hidden .main-nav
+        transition margin-top 0.3s ease-in-out
+        margin-top 0
+        position fixed
+        left 0
+        right 0
+        top 0
 
-.nav-hidden.scrolling-up .main-nav
-    margin-top -130px
+    .nav-hidden.scrolling-up .main-nav
+        margin-top -130px
 
 
 @media (max-width: 960px)
-  .nav
+  .nav, .main-nav-wrapper
     display:none;
+
 
 #mobileFooterNav
   background-color #f5f5f5
